# example_algo

./: .gitignore  Makefile  README.md  config.py  config.yaml.example  main.py  pyproject.toml
sp_proto/: fed_messages.proto  portfolio_manager.proto  trader.proto  versions.txt
