[tool.poetry]
name = "example-algo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.65.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
